# beets-statistics

./: .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  Makefile  Pipfile  README.md  apitool.py  app.py  beetsstatistics.py  build.sh  ideas.md  main.py  package.json  pyproject.toml  renovate.json  settings.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: docker-image.yml  python-app.yml
static/: main.css
templates/: added-timeline.html  album.html  albums.html  artists.html  decades.html  duplicates.html  footer.html  genre-decade-heatmap.html  genres.html  index.html  macros.tmpl  navigation.html  not-in-mb.html  quality.html
test/: beetsstatistics_test.py
