[project]
name = ""
version = "0.0.1"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi[standard]==0.124.4",
    "pyyaml",
    "jinja2",
    "humanize",
    "pydantic",
    "pydantic-settings",
    "logfmter>=0.0.11",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pip-audit>=2.9.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff.lint]
select = ["I"]
