[project]
name = "beets-statistics"
description = "Generate insights into your music collection with beets"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.13,<4"
license = "GPL v3"
license-files = ["LICENSE.md"]
authors = [
    {name = "Philip guerda Gillißen"},
]
maintainers = [
    {name = "Philip guerda Gillißen"},
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]==0.136.1",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "humanize==4.15.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "logfmter==0.0.12",
]

[project.urls]
Source = "https://github.com/guerda/beets-statistics/"
Issues = "https://github.com/guerda/beets-statistics/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "pytest==9.0.3",
    "pip-audit==2.10.0",
    "ty>=0.0.28",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff.lint]
select = [
    "I",       # isort
]